<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_admin_1"
        android:orientation="vertical"
        tools:context=".view.fragment.PermissionAdmin.AddDataToCart.AddToCartFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/color2"
            android:fontFamily="@font/youngserif_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="30sp"
            android:layout_marginTop="70dp"
            android:text="@string/type_food"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTypeFood"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="36dp"
            android:background="@drawable/bg_editext_type"
            android:hint="@string/t_n_m_n_n"
            android:padding="6dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvType" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTypePriceOfFood"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:hint="@string/type_price"
            android:textSize="20sp"
            android:inputType="number"
            android:background="@drawable/bg_editext_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTypeFood" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDescribe"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="10dp"
            android:padding="8dp"
            android:hint="@string/describe"
            android:textSize="20sp"
            android:inputType="text"
            android:background="@drawable/bg_editext_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTypePriceOfFood" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTypeDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="36dp"
            android:background="@drawable/bg_editext_type"
            android:hint="@string/date_of_food"
            android:inputType="number"
            android:padding="8dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDescribe" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100dp"
            app:backgroundTint="@color/pink"
            android:text="@string/choose_an_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTypeDate" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgImageFood"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnChooseImage"
            app:layout_constraintTop_toBottomOf="@+id/edtTypeDate" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imgImageFood"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/finish_action"
            app:backgroundTint="@color/colorPrimaryDark2"
            android:layout_marginTop="30dp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spType"
            app:layout_constraintTop_toBottomOf="@id/edtTypeDate"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toStartOf="@id/imgImageFood"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>