<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activity.Bill_Second_Activity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:elevation="10dp"
                    android:id="@+id/firtLinearLayout">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/btnBackBillSecond"
                        android:src="@drawable/baseline_arrow_back_24"
                        android:layout_margin="13dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_textview_20sp"
                        android:textStyle="bold"
                        android:text="@string/the_order"
                        android:layout_marginTop="13dp"
                        android:layout_marginStart="100dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/dimen_textview_20sp"
                        android:text="@string/cancel_order"
                        android:layout_marginTop="13dp"
                        android:layout_marginStart="80dp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#B3706D6D"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/secondLinearLayout"
                    android:orientation="vertical">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/lottieAnimation"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/animation_checkout"/>



                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/don_dat_hang_truoc"
                        android:textStyle="bold"
                        android:textSize="@dimen/dimen_textview_26sp"
                        android:layout_margin="20dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="385dp"
                        android:layout_height="wrap_content"
                        android:text="@string/loi_cam_on"
                        android:textStyle="normal"
                        android:textSize="@dimen/dimen_textview_20sp"
                        android:layout_marginStart="20dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="5dp"
                        android:background="#AD8F8A8A"
                        android:layout_marginTop="16dp" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/constrainLayout">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvNoiMuaHang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textview_normal_bill_second"
                        android:text="@string/location_buy_thing"
                        android:drawableStart="@drawable/cutlery_24"
                        android:drawablePadding="10dp"
                        android:layout_marginStart="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvMyBusiness"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textview_bold_bill_second"
                        android:text="@string/my_business"
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvNoiMuaHang" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvNoiGiaoHang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/textview_normal_bill_second"
                        android:text="@string/location_delivery"
                        android:drawableStart="@drawable/location_pin"
                        android:drawablePadding="10dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvMyBusiness" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvMyLocation"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        style="@style/textview_bold_bill_second"
                        android:ellipsize="end"
                        android:maxLines="1"
                        tools:text="80.Dịch Vọng Hậu, Dịch Vọng Hậu, Cầu Giấy,..."
                        android:layout_marginStart="55dp"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvNoiGiaoHang" />

                    <View
                        android:id="@+id/myView"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#57575151"
                        android:paddingStart="40dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvMyLocation"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="10dp" />

                    <LinearLayout
                        android:id="@+id/linearMon"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:orientation="horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/myView"
                        app:layout_constraintStart_toStartOf="parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvQuanityBillSecond"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/dimen_textview_20sp"
                            tools:text="3" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvMon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/dimen_textview_20sp"
                            android:text=" món | " />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvCacMonAn"
                            android:layout_width="300dp"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:textSize="@dimen/dimen_textview_20sp"
                            android:layout_height="wrap_content"
                            tools:text="Trà đào cam sả" />
                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/linearTong"
                        app:layout_constraintTop_toBottomOf="@+id/linearMon">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            style="@style/textview_bold_bill_second"
                            android:text="@string/tổng" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPriceBillSecond"
                            android:layout_width="wrap_content"
                            android:gravity="end"
                            android:layout_height="30dp"
                            android:layout_marginEnd="10dp"
                            android:layout_alignParentEnd="true"
                            style="@style/textview_bold_bill_second"
                            tools:text="@string/_100_000" />
                    </RelativeLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="#99838181" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="23dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_shop"
                        style="@style/textview_bold_bill_second" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_description"
                        style="@style/textview_normal_bill_second" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_number_phone"
                        style="@style/textview_normal_bill_second" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_email"
                        style="@style/textview_normal_bill_second" />
                </LinearLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>
</layout>